--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -10,8 +10,11 @@
 [section-name = 'logo-slider'] .flickity-page-dots .dot{@apply rounded-none w-4 h-1 pointer-events-none}
 [section-name = 'logo-slider'] .flickity-page-dots .dot.is-selected{@apply w-5}
 
-[section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply md:text-4_5xl text-3xl mb-7}
-[section-name = 'store-features'] [tag-name = 'features-header'] p{@apply text-xl px-4}
+[section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply md:text-4_5xl text-2_5xl mb-7}
+[section-name = 'store-features'] [tag-name = 'features-header'] p{@apply md:text-xl px-4}
+[section-name = 'store-features'] [tag-name = 'features-ul'] .flickity-page-dots {@apply absolute -bottom-8 w-full}
+[section-name = 'store-features'] [tag-name = 'features-ul'] .flickity-page-dots .dot{@apply h-1 w-6 rounded-none mx-1 p-0 bg-black-600}
+[section-name = 'store-features'] [tag-name = 'features-ul'] .flickity-page-dots .dot.is-selected{@apply bg-white}
 
 #header{@apply transition-colors duration-300}
 
@@ -48,15 +51,53 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 .pswp--click-to-zoom.pswp--zoom-allowed .pswp__img{@apply bg-white}
 .zoomImg{@apply !bg-white}
 
-.slideshow-wrapper .hbStyle .flickity-page-dots{@apply px-4 max-w-page left-1/2 -translate-x-1/2 justify-start lg:bottom-12 md:bottom-8 bottom-6}
-.slideshow-wrapper .hbStyle .flickity-page-dots .dot{@apply bg-white rounded-none w-2 h-2 transition-all}
-.slideshow-wrapper .hbStyle .flickity-page-dots .dot.is-selected{@apply bg-vi w-8}
-
+.slideshow-wrapper .hbStyle .flickity-page-dots{@apply md:px-4 pl-8 max-w-page left-1/2 -translate-x-1/2 justify-start lg:bottom-12 md:bottom-8 bottom-6 }
+.slideshow-wrapper .hbStyle .flickity-page-dots .dot{@apply bg-white rounded-none md:w-2 md:h-2 w-4 h-3 transition-all}
+.slideshow-wrapper .hbStyle .flickity-page-dots .dot.is-selected{@apply bg-vi md:w-8 w-12}
 
 @media only screen and (max-width:765px) {
     .pr_thumbs_item {@apply w-[18.5%] mx-[0.3%] }
     .product-single .flickity-button{@apply hidden }
+    [flickity-screen='pc']:after {@apply content-none }
+    [flickity-screen='mobile']:after {@apply content-['flickity'] hidden }
+    .notification-bar__message,
+    #newsletter-modal .checkboxlink,
+    #newsletter-modal p.sub-text{@apply !text-xs}
+    .footer-top a{@apply !text-[26px]}
+    #MobileNav li a,
+    .closemmn .at,
+    .site-footer,
+    .footer-top .newsletter .btn,
+    input, textarea, select{@apply !text-base}
+    #newsletter-modal h2,
+    .footer-links .h4:before,
+    #newsletter-modal .mfp-close{@apply !text-lg}
+    .site-header{@apply h-[4.65rem]}
+    .site-header a.hdicon .at{@apply text-2xl leading-none}
+    [tag-name = 'logo'],[tag-name = 'reversal-logo']{@apply !w-38 !h-auto !max-w-none}
+    .page-width{@apply !px-4}
+    .mobile-nav-wrapper{@apply w-60}
+    #MobileNav li a{@apply py-2}
+    .closemmn{@apply right-10 w-10 h-10}
+    [section-name = 'products-slider-full']{@apply !bg-none}
+    #newsletter-modal,
+    #newsletter-modal .wraptext{@apply !max-w-sm}
+    #newsletter-modal .wraptext{@apply px-4}
+    [type='checkbox']{@apply w-3 h-3}
+    #newsletter-modal h2{@apply !mb-3}
+    #newsletter-modal p.sub-text{@apply !mb-6}
+    .footer-bottom .payment-list__item{@apply !h-auto w-8 mr-2}
+    .footer-links .h4.active{@apply text-white font-bold}
+    .footer-top .newsletter .wrap-newsletter{@apply max-w-none}
+    #shopify-section-footer [section-name = 'localization'] img{@apply w-4 h-4}
+    #shopify-section-footer [section-name = 'localization'] select{@apply text-black-400}
 }
+
+@media only screen and (min-width:765px) {
+    [flickity-screen='pc']:after {@apply content-['flickity'] hidden}
+    [flickity-screen='mobile']:after {@apply content-none}
+}
+
 
 
 
@@ -70,12 +111,21 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
         --ft2:'Product Sans';
         --ft3:'Product Sans';
     }
-    
+    @media only screen and (max-width:750px){
+        :root{
+            --fs:'28px';
+            --fsm:'24px';
+        }
+    }
 }
 
 @layer utilities{
     .shopify-section .grid:not(.flickity-enabled){@apply flex}
     .shopify-section .grid.flickity-enabled{@apply block}
+
+    @media only screen and (max-width:750px){
+        html,body { font-size:28px }
+    }
 }
 
 @layer components {
@@ -84,7 +134,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{@apply !hid
 
     .social-icons .social-icons__link{@apply text-black-400}
     .social-icons .social-icons__link span{@apply hidden}
-    .social-icons .social-icons__link i{@apply text-xl}
+    .social-icons .social-icons__link i{@apply md:text-xl text-2xl md:mr-0 mr-4}
+    .social-icons .icon{@apply md:w-5 md:h-5 w-[1.875rem] h-[1.875rem] md:mr-0 mr-4}
 
     #siteNav ul.dropdown li a:hover{@apply !bg-transparent}
     .btn-featured{@apply font-normal rounded-full bg-gradient-to-b from-vi-light to-vi-dark border-none  hover:text-white hover:-translate-y-1 hover:scale-95}
