--- a/assets/default.css.liquid
+++ b/assets/default.css.liquid
@@ -223,8 +223,7 @@ color:{{settings.sr_txt}}; background-color:{{settings.sr_bg}};  box-shadow:0 0 
 #newsletter-modal .checkboxlink { font-size:10px; text-transform:uppercase; margin:20px 0 0; }
 #newsletter-modal .mfp-close { color:{{settings.newsltr_close}} !important; font-size:30px; opacity:1; }
 @media only screen and (max-width:766px) {
-	#newsletter-modal { max-width:400px; }
-	#newsletter-modal .newsltr-text { padding:30px 20px; }
+	#newsletter-modal .newsltr-text { padding:1.5rem 1rem; }
   	#newsletter-modal .input-group { display:block; }
   	#newsletter-modal .input-group input { margin-bottom:10px; }
 }
