--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -101,6 +101,7 @@ body{ font-family:var(--{{settings.bdft}});
     body { letter-spacing:0.02em }
 }
 
+
 h1,h2,h3,h4,h5,h6 {
   font-family:var(--{{settings.hdft}}); line-height:{{ settings.type_header_base_size_lh}}; letter-spacing:0.0{{settings.type_header_letter_space}}em;
   overflow-wrap: break-word; word-wrap: break-word; margin:0 0 20px 0;
@@ -1715,17 +1716,17 @@ h2.com-title { font-size:14px; text-align:left; letter-spacing:0.5px; margin:0; 
 	.footer-block__item.one-whole.newsletter { width:100%; }
 }
 @media only screen and (max-width:766px) {
-    .hrline hr { margin:5px 0;}   
+  .hrline hr { margin:5px 0;}   
 	.site-footer .footer-fw { padding:0 10px; }
-  	.footer-block { margin:0; padding:15px 0; }
-	.footer-block__item { width:100% !important; padding:12px 0; margin:0; }
-	.footer-block__item + .footer-block__item { border-top:1px solid {{settings.top_footer_text | color_modify: 'alpha', 0.1}}; }
-  	.footer-block__item.hrline { border-top:0;} 
+  .footer-block { margin:0; padding:15px 0; }
+	.footer-block__item { width:100% !important; padding:1rem 0; margin:0; }
+	.footer-block__item + .footer-block__item { border-top:1px solid {{settings.footer_title}}75; }
+  .footer-block__item.hrline { border-top:0;} 
 
 	.footer-links .h4 { line-height:20px; margin-bottom:0; cursor:pointer; }
 	.footer-links .h4:before { content:"\ea45"; font-size:15px; font-family:"adorn-icons"; float:right; }
 	.footer-links .h4.active:before { content:"\ea48"; }
-	.footer-links .h4 + ul { display:none; margin:10px 0 20px; }    
+	.footer-links .h4 + ul { display:none; margin:.75rem 0; }    
 }
 
 .footer-bottom { background:{{settings.footer_bottom_bg}}; color:{{settings.footer_bottom_text}}; padding:25px 0; {% if settings.footer_border != blank %} border-top:1px dotted {{settings.footer_border}}; {% endif %} }
