--- a/assets/themeRtl.css.liquid
+++ b/assets/themeRtl.css.liquid
@@ -1859,12 +1859,12 @@ h2.com-title { font-size:14px; text-align:left; letter-spacing:0.5px; margin:0; 
 	.footer-block__item.one-whole.newsletter { width:100%; }
 }
 @media only screen and (max-width:766px) {
-    .hrline hr { margin:5px 0;}   
+  .hrline hr { margin:5px 0;}   
 	.site-footer .footer-fw { padding:0 10px; }
-  	.footer-block { margin:0; padding:15px 0; }
-	.footer-block__item { width:100%; padding:12px 0; margin:0; }
-	.footer-block__item + .footer-block__item { border-top:1px solid {{settings.top_footer_text | color_modify: 'alpha', 0.1}}; }
-  	.footer-block__item.hrline { border-top:0;} 
+  .footer-block { margin:0; padding:15px 0; }
+  .footer-block__item { width:100% !important; padding:1rem 0; margin:0; }
+	.footer-block__item + .footer-block__item { border-top:1px solid {{settings.footer_title}}75; }
+  .footer-block__item.hrline { border-top:0;} 
 
 	.footer-links .h4 { line-height:20px; margin-bottom:0; cursor:pointer; }
 	.footer-links .h4:before { content:"\ea45"; font-size:15px; font-family:"adorn-icons"; float:right; }
